--- a/index.Rmd
+++ b/index.Rmd
@@ -27,8 +27,10 @@ output:
           <li><a href="./">Teoria de Galois</a></li>
         after: |
           <li><a href="https://github.com/mmasdeu/teoriadegalois" target="blank">Publicat amb bookdown</a></li>
+        collapse: section
       edit: https://github.com/mmasdeu/teoriadegalois/edit/main/%s
       download: ["pdf"]
+
   bookdown::pdf_book:
     toc: no
     includes:
