--- a/src/03-RegleCompas.Rmd
+++ b/src/03-RegleCompas.Rmd
@@ -116,11 +116,23 @@ $$
 \cos(72^\circ) = \frac{1}{4} \, \sqrt{5} - \frac{1}{4}.
 $$
 
-Aquí en tenim un exemple:
+Aquí en tenim un exemple.
+
+::: {.exercise}
+En aquest dibuix, comencem amb els punts $A$ i $B$. Podem dibuixar
+els cercles $1$ i $2$, dibuixar el cercle $3$, obtenint els punts $C$ i $D$.
+La mediatriu del segment $AB$ talla el cercle $3$ en el punt $F$,
+i podem construir les rectes $CF$ i $DF$, que donen lloc als punts $M$ i $N$.
+
+Si volem construir el cinquè vèrtex del pentàgon, només hem de traçar els
+cercles $4$ i $5$.
+
+Demostreu que aquesta construcció resulta en un pentàgon regular.
+
 ```{r, echo=FALSE, out.width="50%", fig.align='center'}
 knitr::include_graphics("images/pentagon.png")
 ```
-
+:::
 
 Encara és més fàcil construir el triangle equilàter ($30^\circ$), ja que $\cos(30^\circ)=\sqrt{2}/2$. Com que
 podem bisectar qualsevol angle, també podem construir $18^\circ$ i $15^\circ$. Finalment, com que $3=18-15$ també podem construir
