--- a/src/90-LlistaProblemes.Rmd
+++ b/src/90-LlistaProblemes.Rmd
@@ -1,13 +1,13 @@
 # Llista de Problemes
 
-### Episodi 1 {-}
+<!-- ### Episodi 1 {-} -->
 
 1. Demostreu que $f(x)=x^3-10x^2+5$ és irreductible a $\QQ[x]$. Sigui $F=\QQ(\alpha)$, on $\alpha$ és una arrel de $f(x)$. Calculeu $1/(1+\alpha^2)$.
 2. Demostreu que $x^3+x^2+1$ és irreductible a $\FF_2$. Sigui $F=\FF_2(\alpha)$, on $\alpha$ és una arrel de $f(x)$. Calculeu les potències d'$\alpha$ a $F$.
 3. Demostreu que $x^3-nx+2$ és irreductible si $n\neq -1, 3, 5$.
 4. Trobeu per quins valors de $t\in \ZZ$ el polinomi $x^5+tx-1\in \ZZ[x]$ és irreductible.
 
-### Episodi 2 {-}
+<!-- ### Episodi 2 {-} -->
 
 1. Trobeu el polinomi mínim de $2+3i$ sobre $\QQ$, on $i=\sqrt{-1}$.
 2. Trobeu el grau de $1+\sqrt[3]{2}+\sqrt[3]{4}$ sobr $\QQ$.
@@ -23,17 +23,17 @@
 8. Amb la notació de l'apartat anterior, demostreu que $\alpha$ és una arrel del polinomi característic de $m_\alpha$. Aprofiteu
   aquest resultat per trobar el polinomi mínim de $1+\sqrt[3]{2}+\sqrt[3]{4}$.
 
-### Episodi 3 {-}
+<!-- ### Episodi 3 {-} -->
 
 1. Demostreu que no es pot construir el polígon regular de $9$ costats amb regle i compàs.
 2. Demostreu que $2\cos(2\pi/7)$ és arrel del polinomi $x^3+x^2-2x-1$, i deduiu que l'heptàgon regular no és constructible amb regle i compàs.
 
-### Episodi 4 {-}
+<!-- ### Episodi 4 {-} -->
 
 1. Trobeu els cossos de descomposició de $x^4-2$, $x^4+2$, $x^4+x^2+1$, $x^6-4$.
 2. Demostreu que si $K_1/F$ i $K_2/F$ són extensions normals, aleshores $K_1K_2/F$ i $K_1\cap K_2 / F$ també ho són.
 
-### Episodi 5 {-}
+<!-- ### Episodi 5 {-} -->
 
 1. Demostreu que $\mcd(x^a-1, x^b-1) = x^{\mcd{a,b}}-1$.
 2. Descomposeu $x^16-x \in \FF_2[x]$ en producte d'irreductibles.
@@ -45,49 +45,57 @@
 8. Sigui $\varphi(x)=x^p$ el morfisme de Frobenius en un cos finit $\FF_{p^n}$. Calculeu la forma de Jordan de $\varphi$
   pensat com una aplicació $\FF_p$-lineal.
 
-### Episodi 6 {-}
+<!-- ### Episodi 6 {-} -->
 
 1. Sigui $A=\CC[[t]]$ l'anell de sèries de potències formals, i sigui $F$ el seu cos de fraccions. Demostreu que el conjunt
-$$
-K = \{\sum_{k=0}^\infty c_k t^{k/n} ~|~ n \geq 1\}
-$$
-és un cos, i de fet és una clausura algebraica d'$F$.
+  $$
+  K = \{\sum_{k=0}^\infty c_k t^{k/n} ~|~ n \geq 1\}
+  $$
+  és un cos, i de fet és una clausura algebraica d'$F$.
 
-2. 
 
-### Episodi 7 {-}
+<!-- ### Episodi 7 {-} -->
 
-TODO
+1. Demostreu que si $\sigma\colon K\to K$ és un automorfisme i $F\subseteq K$ és el cos primer de $K$, aleshores la
+  restricció de $\sigma$ $F$ és la identitat.
+2. Sigui $F$ un cos infinit, i sigui $V$ un $F$-espai vectorial de dimensió infinita. Demostreu que si $V_1, \ldots, V_r$ són
+  subespais propis, aleshores existeix $v \in V$ que no pertany a cap dels $V_i$.
+3. Demosteu que si $K/F$ és una extensió de cossos de grau infinit, i $K_1,\ldots,K_r$ són subextensions pròpies de $K$, aleshores
+  hi ha algun element de $K$ que no pertany a cap dels $K_i$.
 
-### Episodi 8 {-}
+<!-- ### Episodi 8 {-} -->
 
-TODO
+1. Calculeu el reticle de subcossos del cos de descomposició de $x^8-2$ sobre $\QQ$.
 
-### Episodi 9 {-}
+<!-- ### Episodi 9 {-} -->
 
-TODO
+1. Sigui $L/\FF_p$ una extensió de cossos i $\alpha \in L$ un element algebraic sobre $\FF_p$ . Demostreu que
+  $\alpha^p$ és una arrel de $\Irr_{\alpha,\FF_p}(x)$.
+2. Trobeu els irreductibles sobre $\FF_2$ de tots els elements del cos $\FF_2[x]/(x^3 + x + 1)$.
+3. Trobeu tots els irreductibles de grau $\leq 6$ de $\FF_2[x]$.
 
-### Episodi 10 {-}
-
-TODO
-
-### Episodi 11 {-}
-
-TODO
-
-### Episodi 12 {-}
-
-TODO
-
-### Episodi 13 {-}
+<!-- ### Episodi 10 {-} -->
 
 TODO
 
-### Episodi 14 {-}
+<!-- ### Episodi 11 {-} -->
 
 TODO
 
-### Episodi 15 {-}
+<!-- ### Episodi 12 {-} -->
+
+TODO
+
+<!-- ### Episodi 13 {-} -->
+
+1. Trobeu una torre d'extensions radicals que contingui el cos de descomposició del polinomi
+  $f(x) = x^6 + ax^3 + b \in F[x]$, on $F$ és un cos de característica $0$ i $a,b\in F$.
+
+<!-- ### Episodi 14 {-} -->
+
+1. Donat $G$ un grup finit, proveu que existeix una extensió $K/F$ Galois amb grup de Galois $G$.
+
+<!-- ### Episodi 15 {-} -->
 
 TODO
 
