--- a/src/90-LlistaProblemes.Rmd
+++ b/src/90-LlistaProblemes.Rmd
@@ -6,9 +6,7 @@
 2. Demostreu que $x^3+x^2+1$ és irreductible a $\FF_2$. Sigui $F=\FF_2(\alpha)$, on $\alpha$ és una arrel de $f(x)$. Calculeu les potències d'$\alpha$ a $F$.
 3. Demostreu que $x^3-nx+2$ és irreductible si $n\neq -1, 3, 5$.
 4. Trobeu per quins valors de $t\in \ZZ$ el polinomi $x^5+tx-1\in \ZZ[x]$ és irreductible.
-
 <!-- ### Episodi 2 {-} -->
-
 1. Trobeu el polinomi mínim de $2+3i$ sobre $\QQ$, on $i=\sqrt{-1}$.
 2. Trobeu el grau de $1+\sqrt[3]{2}+\sqrt[3]{4}$ sobr $\QQ$.
 3. Sigui $F$ un cos de característica diferent de $2$. Sigui $a,b\in F$ elements amb $b$ no-quadrat a $F$.
@@ -22,19 +20,13 @@
   l'anell $M_n(F)$ conté un cos isomorf a $K$.
 8. Amb la notació de l'apartat anterior, demostreu que $\alpha$ és una arrel del polinomi característic de $m_\alpha$. Aprofiteu
   aquest resultat per trobar el polinomi mínim de $1+\sqrt[3]{2}+\sqrt[3]{4}$.
-
 <!-- ### Episodi 3 {-} -->
-
 1. Demostreu que no es pot construir el polígon regular de $9$ costats amb regle i compàs.
 2. Demostreu que $2\cos(2\pi/7)$ és arrel del polinomi $x^3+x^2-2x-1$, i deduiu que l'heptàgon regular no és constructible amb regle i compàs.
-
 <!-- ### Episodi 4 {-} -->
-
 1. Trobeu els cossos de descomposició de $x^4-2$, $x^4+2$, $x^4+x^2+1$, $x^6-4$.
 2. Demostreu que si $K_1/F$ i $K_2/F$ són extensions normals, aleshores $K_1K_2/F$ i $K_1\cap K_2 / F$ també ho són.
-
 <!-- ### Episodi 5 {-} -->
-
 1. Demostreu que $\mcd(x^a-1, x^b-1) = x^{\mcd{a,b}}-1$.
 2. Descomposeu $x^16-x \in \FF_2[x]$ en producte d'irreductibles.
 3. Sigui $p$ un primer. Demostreu que $x^p-x+a\in \FF_p[x]$ és irreductible i separable per tot $a\in\FF_p$.
@@ -44,58 +36,40 @@
 7. Demostreu que si $n\geq 3$ és senar, llavors $\Phi_{2n}(x)=\Phi_n(-x)$.
 8. Sigui $\varphi(x)=x^p$ el morfisme de Frobenius en un cos finit $\FF_{p^n}$. Calculeu la forma de Jordan de $\varphi$
   pensat com una aplicació $\FF_p$-lineal.
-
 <!-- ### Episodi 6 {-} -->
-
 1. Sigui $A=\CC[[t]]$ l'anell de sèries de potències formals, i sigui $F$ el seu cos de fraccions. Demostreu que el conjunt
   $$
   K = \{\sum_{k=0}^\infty c_k t^{k/n} ~|~ n \geq 1\}
   $$
   és un cos, i de fet és una clausura algebraica d'$F$.
-
-
 <!-- ### Episodi 7 {-} -->
-
 1. Demostreu que si $\sigma\colon K\to K$ és un automorfisme i $F\subseteq K$ és el cos primer de $K$, aleshores la
   restricció de $\sigma$ $F$ és la identitat.
 2. Sigui $F$ un cos infinit, i sigui $V$ un $F$-espai vectorial de dimensió infinita. Demostreu que si $V_1, \ldots, V_r$ són
   subespais propis, aleshores existeix $v \in V$ que no pertany a cap dels $V_i$.
 3. Demosteu que si $K/F$ és una extensió de cossos de grau infinit, i $K_1,\ldots,K_r$ són subextensions pròpies de $K$, aleshores
   hi ha algun element de $K$ que no pertany a cap dels $K_i$.
-
 <!-- ### Episodi 8 {-} -->
-
 1. Calculeu el reticle de subcossos del cos de descomposició de $x^8-2$ sobre $\QQ$.
-
 <!-- ### Episodi 9 {-} -->
-
 1. Sigui $L/\FF_p$ una extensió de cossos i $\alpha \in L$ un element algebraic sobre $\FF_p$ . Demostreu que
   $\alpha^p$ és una arrel de $\Irr_{\alpha,\FF_p}(x)$.
 2. Trobeu els irreductibles sobre $\FF_2$ de tots els elements del cos $\FF_2[x]/(x^3 + x + 1)$.
 3. Trobeu tots els irreductibles de grau $\leq 6$ de $\FF_2[x]$.
-
 <!-- ### Episodi 10 {-} -->
-
-TODO
-
+1. Trobeu un element primitiu per l'extensió $\QQ(\sqrt{2},\sqrt{3})/\QQ$.
+2. Considereu el cos $F = \FF_2(t)$, i l'extensió $K = \FF_2(\sqrt[3]{t})$. Considereu
+  el polinomi $f(x) = x^3 - t \in F[x]$.
+    a. Demostreu que $f(x)$ és irreductible a $F[x]$ i que també és separable.
+    b. Vegeu que existeix un cos de descomposició $E$ de $f(x)$ sobre $F$ que conté el cos $K$ definit
+      anteriorment. Vegeu que l'extensió $E/F$ és de Galois i calculeu-ne el grup de Galois.
+    c. Siguin $\alpha$ i $\beta$ dues arrels diferents de $f(x)$ a $E$. Proveu que $\alpha\beta$ és algebraic sobre $\FF_2$.
+      Demostreu que l'extensió $E/`\FF_2$ no és simple, o sigui no existeix cap $\delta\in E$ tal que $E =\FF_2(\delta)$.
 <!-- ### Episodi 11 {-} -->
-
-TODO
-
 <!-- ### Episodi 12 {-} -->
-
-TODO
-
 <!-- ### Episodi 13 {-} -->
-
 1. Trobeu una torre d'extensions radicals que contingui el cos de descomposició del polinomi
   $f(x) = x^6 + ax^3 + b \in F[x]$, on $F$ és un cos de característica $0$ i $a,b\in F$.
-
 <!-- ### Episodi 14 {-} -->
-
 1. Donat $G$ un grup finit, proveu que existeix una extensió $K/F$ Galois amb grup de Galois $G$.
-
 <!-- ### Episodi 15 {-} -->
-
-TODO
-
